dragonstowolves: Finished up the wolfification as a couple of things were missed and a couple of changes I was working on conflicted.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -4,11 +4,11 @@
 # Type (Language): English (US)
 
 # - General Localization
-itemGroup.needsmoredragons=Needs More Dragons
+itemGroup.stacywolves=Stacy's Wolves
 
 # Entity Localization
-entity.needsmoredragons.EntityFireDragon.name=Fire Dragon
+entity.stacywolves.EntityFireDragon.name=Fire Dragon
 
 # - Item Localization
-item.needsmoredragons:something.name=The Thing!
-item.needsmoredragons:something.tooltip=It's a thing
+item.stacywolves:something.name=The Thing!
+item.stacywolves:something.tooltip=It's a thing
