more de-dragonification

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -7,7 +7,7 @@
 itemGroup.stacywolves=Stacy's Wolves
 
 # Entity Localization
-entity.stacywolves.EntityFireDragon.name=Fire Dragon
+entity.stacywolves.EntityFireWolf.name=Fire Wolf
 
 # - Item Localization
 item.stacywolves:something.name=The Thing!
