Added ability for different kinds of wolf to breed  with one another (but not Vanilla wolves). Children will be one of the two different wolf types; chosen randomly.  Added meaty bone for breeding wolves. Closes #13

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -55,4 +55,5 @@ item.stacywolves.wolf_food_savannah_bone.name=Savannah Bone
 item.stacywolves.wolf_food_skeleton_bone.name=Bony Bone
 item.stacywolves.wolf_food_water_bone.name=Ocean Bone
 item.stacywolves.wolf_food_zombie_bone.name=Zombone
+item.stacywolves.wolf_food_meaty_bone.name=Meaty Bone of Love
 
