Added tooltips for the different kinds of bone. Hold shift to see them. Closes #8.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -33,27 +33,51 @@ entity.stacywolves.EntityZombieWolf.name=Zombie Wolf
 
 # - Item Localization
 item.stacywolves.wolf_food_air_bone.name=Cloud Bone
+item.stacywolves.wolf_food_air_bone.tooltip=Rumoured to be liked by the mythical Cloud Wolf.
 item.stacywolves.wolf_food_birch_bone.name=Birch Bone
+item.stacywolves.wolf_food_birch_bone.tooltip=The woody aroma is reminiscent of the Birch Wolf.
 item.stacywolves.wolf_food_cake_bone.name=Cake Bone
+item.stacywolves.wolf_food_cake_bone.tooltip=The delicious cake reminds the Cake Wolf of its mother.
 item.stacywolves.wolf_food_desert_bone.name=Cactus Bone
+item.stacywolves.wolf_food_desert_bone.tooltip=Only a Cactus Wolf would want anything to do with this spiky monstrosity.
 item.stacywolves.wolf_food_diamond_bone.name=Diamond Bone
+item.stacywolves.wolf_food_diamond_bone.tooltip=The snobby Diamond Wolf will eat only the finest bones.
 item.stacywolves.wolf_food_earth_bone.name=Earth Bone
+item.stacywolves.wolf_food_earth_bone.tooltip=The Earth Wolf will really dig this.
 item.stacywolves.wolf_food_emerald_bone.name=Emerald Bone
+item.stacywolves.wolf_food_emerald_bone.tooltip=This bone will remind the Emerald Wolf of its home in the mountains.
 item.stacywolves.wolf_food_end_bone.name=End Bone
+item.stacywolves.wolf_food_end_bone.tooltip=End wolves will only eat bones with traces of The End in them.
 item.stacywolves.wolf_food_ender_bone.name=Ender Bone
+item.stacywolves.wolf_food_ender_bone.tooltip=This ender-infused bone can maintain phase with the otherworldly Ender Wolves.
 item.stacywolves.wolf_food_fire_bone.name=Blaze Bone
+item.stacywolves.wolf_food_fire_bone.tooltip=Blaze-infused bones may satiate the apetite of the hellish Blaze Wolf.
 item.stacywolves.wolf_food_flower_bone.name=Bone Bouquet
+item.stacywolves.wolf_food_flower_bone.tooltip=The aromatic bone flower will tempt the Flower Wolf.
 item.stacywolves.wolf_food_gold_bone.name=Gold Bone
+item.stacywolves.wolf_food_gold_bone.tooltip=A bone of gold matches the Gold Wolf's bling.
 item.stacywolves.wolf_food_ice_bone.name=Snow Bone
+item.stacywolves.wolf_food_ice_bone.tooltip=This bone is cold enough that it might just avoid melting the Ice Wolf. Better not have used the yellow snow.
 item.stacywolves.wolf_food_iron_bone.name=Iron Bone
+item.stacywolves.wolf_food_iron_bone.tooltip=The Iron Wolf will surely enjoy this bone of steel.
 item.stacywolves.wolf_food_mesa_bone.name=Mesa Bone
+item.stacywolves.wolf_food_mesa_bone.tooltip=Aperture Science engineered this bone to attract the Mesa Wolf.
 item.stacywolves.wolf_food_mushroom_bone.name=Boneshroom
+item.stacywolves.wolf_food_mushroom_bone.tooltip=This mushy bone looks like it came from the cannibalistic Mushroom Wolf.
 item.stacywolves.wolf_food_nether_bone.name=Magma Bone
+item.stacywolves.wolf_food_nether_bone.tooltip=Nether Wolves like their bones with a dollop of magma cream.
 item.stacywolves.wolf_food_prismarine_bone.name=Prismatic Bone
+item.stacywolves.wolf_food_prismarine_bone.tooltip=A prismatic bone for a Prismarine Wolf.
 item.stacywolves.wolf_food_redstone_bone.name=Redbone
+item.stacywolves.wolf_food_redstone_bone.tooltip=This red bone seems to spark the interest of Redstone Wolves.
 item.stacywolves.wolf_food_savannah_bone.name=Savannah Bone
+item.stacywolves.wolf_food_savannah_bone.tooltip=Savannah Wolves are reminded of the rains down in Africa.
 item.stacywolves.wolf_food_skeleton_bone.name=Bony Bone
-item.stacywolves.wolf_food_water_bone.name=Ocean Bone
+item.stacywolves.wolf_food_skeleton_bone.tooltip=More bone than your body has room for. Good thing that Bone Wolves have no body.
+item.stacywolves.wolf_food_water_bone.name=Wet Bone
+item.stacywolves.wolf_food_water_bone.tooltip=This wet bone is a little soggy. Perhaps the Ocean Wolves won't mind as everything in their home is soggy.
 item.stacywolves.wolf_food_zombie_bone.name=Zombone
+item.stacywolves.wolf_food_zombie_bone.tooltip=Zombie Wolves will eat ANYthing.... ugh.
 item.stacywolves.wolf_food_meaty_bone.name=Meaty Bone of Love
+item.stacywolves.wolf_food_meaty_bone.tooltip=Feeding this to a tamed wolf will prepare it for mating.
 
