--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -43,7 +43,7 @@ item.stacywolves.wolf_food_desert_bone.tooltip=Only a Cactus Wolf would want any
 item.stacywolves.wolf_food_diamond_bone.name=Diamond Bone
 item.stacywolves.wolf_food_diamond_bone.tooltip=The snobby Diamond Wolf will eat only the finest bones.
 item.stacywolves.wolf_food_earth_bone.name=Earth Bone
-item.stacywolves.wolf_food_earth_bone.tooltip=The Earth Wolf will really dig this.
+item.stacywolves.wolf_food_earth_bone.tooltip=The Dirt Dog will really dig this.
 item.stacywolves.wolf_food_emerald_bone.name=Emerald Bone
 item.stacywolves.wolf_food_emerald_bone.tooltip=This bone will remind the Emerald Wolf of its home in the mountains.
 item.stacywolves.wolf_food_end_bone.name=End Bone
@@ -72,8 +72,8 @@ item.stacywolves.wolf_food_redstone_bone.name=Redbone
 item.stacywolves.wolf_food_redstone_bone.tooltip=This red bone seems to spark the interest of Redstone Wolves.
 item.stacywolves.wolf_food_savannah_bone.name=Savannah Bone
 item.stacywolves.wolf_food_savannah_bone.tooltip=Savannah Wolves are reminded of the rains down in Africa.
-item.stacywolves.wolf_food_skeleton_bone.name=Bony Bone
-item.stacywolves.wolf_food_skeleton_bone.tooltip=More bone than your body has room for. Good thing that Bone Wolves have no body.
+item.stacywolves.wolf_food_skeleton_bone.name=Skele-Bone
+item.stacywolves.wolf_food_skeleton_bone.tooltip=More bone than your body has room for. Good thing that Bone Wolves have no body. Grim from TDM wishes he could have such a bony bone ;)
 item.stacywolves.wolf_food_water_bone.name=Wet Bone
 item.stacywolves.wolf_food_water_bone.tooltip=This wet bone is a little soggy. Perhaps the Ocean Wolves won't mind as everything in their home is soggy.
 item.stacywolves.wolf_food_zombie_bone.name=Zombone
