Another tooltip change.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -57,7 +57,7 @@ item.stacywolves.wolf_food_flower_bone.tooltip=The aromatic bone flower will tem
 item.stacywolves.wolf_food_gold_bone.name=Gold Bone
 item.stacywolves.wolf_food_gold_bone.tooltip=A bone of gold matches the Gold Wolf's bling.
 item.stacywolves.wolf_food_ice_bone.name=Snow Bone
-item.stacywolves.wolf_food_ice_bone.tooltip=This bone is cold enough that it might just avoid melting the Ice Wolf. Better not have used the yellow snow.
+item.stacywolves.wolf_food_ice_bone.tooltip=Sometimes known as a "Pupsicle". This bone is cold enough that it might just avoid melting the Ice Wolf. Better not have used the yellow snow.
 item.stacywolves.wolf_food_iron_bone.name=Iron Bone
 item.stacywolves.wolf_food_iron_bone.tooltip=The Iron Wolf will surely enjoy this bone of steel.
 item.stacywolves.wolf_food_mesa_bone.name=Mesa Bone
