Made some of the tooltips shorter or span lines so that they fit on screen. WTB Forge 1.8.9.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -41,7 +41,7 @@ item.stacywolves.wolf_food_cake_bone.tooltip=The delicious cake reminds the Cake
 item.stacywolves.wolf_food_desert_bone.name=Cactus Bone
 item.stacywolves.wolf_food_desert_bone.tooltip=Only a Cactus Wolf would want anything to do with this spiky monstrosity.
 item.stacywolves.wolf_food_diamond_bone.name=Diamond Bone
-item.stacywolves.wolf_food_diamond_bone.tooltip=The snobby Diamond Wolf will eat only the finest bones.
+item.stacywolves.wolf_food_diamond_bone.tooltip=This bone would break anything but a Diamond Wolf's teeth.
 item.stacywolves.wolf_food_earth_bone.name=Earth Bone
 item.stacywolves.wolf_food_earth_bone.tooltip=The Dirt Dog will really dig this.
 item.stacywolves.wolf_food_emerald_bone.name=Emerald Bone
@@ -57,7 +57,7 @@ item.stacywolves.wolf_food_flower_bone.tooltip=The aromatic bone flower will tem
 item.stacywolves.wolf_food_gold_bone.name=Gold Bone
 item.stacywolves.wolf_food_gold_bone.tooltip=A bone of gold matches the Gold Wolf's bling.
 item.stacywolves.wolf_food_ice_bone.name=Snow Bone
-item.stacywolves.wolf_food_ice_bone.tooltip=Sometimes known as a "Pupsicle". This bone is cold enough that it might just avoid melting the Ice Wolf. Better not have used the yellow snow.
+item.stacywolves.wolf_food_ice_bone.tooltip=Sometimes known as a "Pupsicle".;Ice Wolves will love it. ;Don't eat the yellow snow.
 item.stacywolves.wolf_food_iron_bone.name=Iron Bone
 item.stacywolves.wolf_food_iron_bone.tooltip=The Iron Wolf will surely enjoy this bone of steel.
 item.stacywolves.wolf_food_mesa_bone.name=Mesa Bone
@@ -73,9 +73,9 @@ item.stacywolves.wolf_food_redstone_bone.tooltip=This red bone seems to spark th
 item.stacywolves.wolf_food_savannah_bone.name=Savannah Bone
 item.stacywolves.wolf_food_savannah_bone.tooltip=Savannah Wolves are reminded of the rains down in Africa.
 item.stacywolves.wolf_food_skeleton_bone.name=Skele-Bone
-item.stacywolves.wolf_food_skeleton_bone.tooltip=More bone than your body has room for. Good thing that Bone Wolves have no body. Grim from TDM wishes he could have such a bony bone ;)
+item.stacywolves.wolf_food_skeleton_bone.tooltip=More bone than your body has room for.;Good thing that Bone Wolves have no body.;Grim wishes he could have such a bony bone ;)
 item.stacywolves.wolf_food_water_bone.name=Wet Bone
-item.stacywolves.wolf_food_water_bone.tooltip=This wet bone is a little soggy. Perhaps the Ocean Wolves won't mind as everything in their home is soggy.
+item.stacywolves.wolf_food_water_bone.tooltip=This wet bone is a little soggy. ;Only an Ocean Wolf could love it.
 item.stacywolves.wolf_food_zombie_bone.name=Zombone
 item.stacywolves.wolf_food_zombie_bone.tooltip=Zombie Wolves will eat ANYthing.... ugh.
 item.stacywolves.wolf_food_meaty_bone.name=Meaty Bone of Love
