new-wolves: Added new wolves and textures.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -14,7 +14,7 @@ entity.stacywolves.EntityCakeWolf.name=Cake Wolf
 entity.stacywolves.EntityCoalWolf.name=Coal Wolf
 entity.stacywolves.EntityCookieWolf.name=Cookie Wolf
 entity.stacywolves.EntityCowWolf.name=Cow Wolf
-entity.stacywolves.EntityCraftingWolf.name=Crafting Table Wolf
+entity.stacywolves.EntityCraftingTableWolf.name=Crafting Table Wolf
 entity.stacywolves.EntityDesertWolf.name=Desert Wolf
 entity.stacywolves.EntityDonkeyWolf.name=Donkey Wolf
 entity.stacywolves.EntityDiamondWolf.name=Diamond Wolf
@@ -119,7 +119,7 @@ item.stacywolves.wolf_food_melon_bone.name=Melon Bone
 item.stacywolves.wolf_food_melon_bone.tooltip=Juicy! Melon Wolves are sure to take a liking to those who possess it.
 item.stacywolves.wolf_food_lapis_bone.name=Blue Bone
 item.stacywolves.wolf_food_lapis_bone.tooltip=This bone has been painted blue. Most likely to attract the attention of the elusive Lapis Wolf.
-item.stacywolves.wolf_food_coal_bone.name=Carbon Fiber Bone
+item.stacywolves.wolf_food_coal_bone.name=Carbone Fiber Bone
 item.stacywolves.wolf_food_coal_bone.tooltip=This bone has been constructed of the finest coal. Guaranteed to turn the head of the discerning Coal Wolf.
 item.stacywolves.wolf_food_red_sand_bone.name=Red Sand Bone
 item.stacywolves.wolf_food_red_sand_bone.tooltip=Bits of this bone manage to get everywhere. Better feed it to a Red Sand Wolf before it's too difficult to clean up.
