localization: There's no such thing as a cactus wolf, so changed text of the cactus bone to refer to the desert wolf.

--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -57,7 +57,7 @@ item.stacywolves.wolf_food_birch_bone.tooltip=The woody aroma is reminiscent of 
 item.stacywolves.wolf_food_cake_bone.name=Cake Bone
 item.stacywolves.wolf_food_cake_bone.tooltip=The delicious cake reminds the Cake Wolf of its mother.
 item.stacywolves.wolf_food_desert_bone.name=Cactus Bone
-item.stacywolves.wolf_food_desert_bone.tooltip=Only a Cactus Wolf would want anything to do with this spiky monstrosity.
+item.stacywolves.wolf_food_desert_bone.tooltip=Only a Desert Wolf would want anything to do with this spiky monstrosity.
 item.stacywolves.wolf_food_diamond_bone.name=Diamond Bone
 item.stacywolves.wolf_food_diamond_bone.tooltip=This bone would break anything but a Diamond Wolf's teeth.
 item.stacywolves.wolf_food_earth_bone.name=Earth Bone
