--- a/src/main/resources/assets/stacywolves/lang/en_US.lang
+++ b/src/main/resources/assets/stacywolves/lang/en_US.lang
@@ -102,6 +102,8 @@ item.stacywolves.wolf_transporter.name=Ender Ball
 item.stacywolves.wolf_transporter.tooltip=Through the mighty power of Science;Stacy's Wolves may now be transported using the power of Ender!
 item.stacywolves.wolf_transporter.unnamedcontents.tooltip=Contains {{!colors.light_purple}}{{type}}
 item.stacywolves.wolf_transporter.namedcontents.tooltip=Contains {{!colors.light_purple}}{{type}}{{!colors.reset}}({{!colors.yellow}}{{name}}{{!colors.reset}})
+item.stacywolves.wolf_clicker.name=Wolf Training Clicker
+item.stacywolves.wolf_clicker.tooltip=Allows you to give basic commands to your lupine pals;Right click: Toggle wolf follow
 
 item.stacywolves.wolf_food_inky_bone.name=Inky Bone
 item.stacywolves.wolf_food_inky_bone.tooltip=Sometimes a squid wolf will cover a bone in ink as a tasty snack.
